{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 65,
  "lineage": "b8214379-8b13-a4fd-22b7-57a9f476be47",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08b55926669e5ca5b",
            "association_id": "eipassoc-0395405398bbe8cbf",
            "domain": "vpc",
            "id": "eipalloc-08b55926669e5ca5b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07cb702a96a9fb609",
            "private_dns": "ip-10-0-0-46.ec2.internal",
            "private_ip": "10.0.0.46",
            "public_dns": "ec2-54-85-11-201.compute-1.amazonaws.com",
            "public_ip": "54.85.11.201",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785169158894:internet-gateway/igw-04a83bb2a658dac4c",
            "id": "igw-04a83bb2a658dac4c",
            "owner_id": "785169158894",
            "vpc_id": "vpc-0c0bd5f58b5fc22a2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08b55926669e5ca5b",
            "association_id": "eipassoc-0395405398bbe8cbf",
            "connectivity_type": "public",
            "id": "nat-063a7a3be3774415e",
            "network_interface_id": "eni-07cb702a96a9fb609",
            "private_ip": "10.0.0.46",
            "public_ip": "54.85.11.201",
            "subnet_id": "subnet-0884b9f1bc5290310",
            "tags": {
              "Name": "bjgomes-nat",
              "env": "Dev"
            },
            "tags_all": {
              "Name": "bjgomes-nat",
              "env": "Dev"
            }
          },
          "dependencies": [
            "aws_eip.main",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0819148ad5f4668541080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-063a7a3be3774415e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0819148ad5f466854",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04a83bb2a658dac4c",
            "id": "r-rtb-005913d7dcdeb64031080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-005913d7dcdeb6403",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785169158894:route-table/rtb-0819148ad5f466854",
            "id": "rtb-0819148ad5f466854",
            "owner_id": "785169158894",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-063a7a3be3774415e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bjgomes-privateroutetable",
              "env": "Dev"
            },
            "tags_all": {
              "Name": "bjgomes-privateroutetable",
              "env": "Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0bd5f58b5fc22a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785169158894:route-table/rtb-005913d7dcdeb6403",
            "id": "rtb-005913d7dcdeb6403",
            "owner_id": "785169158894",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04a83bb2a658dac4c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bjgomes-publicroutetable",
              "env": "Dev"
            },
            "tags_all": {
              "Name": "bjgomes-publicroutetable",
              "env": "Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0bd5f58b5fc22a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4399481e4b5bcba",
            "route_table_id": "rtb-0819148ad5f466854",
            "subnet_id": "subnet-0fe017351f71d3968"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045a4548399d11ba3",
            "route_table_id": "rtb-0819148ad5f466854",
            "subnet_id": "subnet-059746d5ca65dc113"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056496e67eb5cfa2b",
            "route_table_id": "rtb-0819148ad5f466854",
            "subnet_id": "subnet-025dcdd3eb1cfd789"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5e57e7be0edf48d",
            "route_table_id": "rtb-0819148ad5f466854",
            "subnet_id": "subnet-0acb14902ff4c5ff6"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9f0fb85d98af185",
            "route_table_id": "rtb-005913d7dcdeb6403",
            "subnet_id": "subnet-0884b9f1bc5290310"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049359d8d8c6fb718",
            "route_table_id": "rtb-005913d7dcdeb6403",
            "subnet_id": "subnet-0644a22ad3d566a87"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785169158894:subnet/subnet-0fe017351f71d3968",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe017351f71d3968",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "785169158894",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bjgomes-privatesubnet",
              "env": "Dev"
            },
            "tags_all": {
              "Name": "bjgomes-privatesubnet",
              "env": "Dev"
            },
            "vpc_id": "vpc-0c0bd5f58b5fc22a2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785169158894:subnet/subnet-059746d5ca65dc113",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059746d5ca65dc113",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "785169158894",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bjgomes-privatesubnet",
              "env": "Dev"
            },
            "tags_all": {
              "Name": "bjgomes-privatesubnet",
              "env": "Dev"
            },
            "vpc_id": "vpc-0c0bd5f58b5fc22a2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785169158894:subnet/subnet-025dcdd3eb1cfd789",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025dcdd3eb1cfd789",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "785169158894",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bjgomes-privatesubnet",
              "env": "Dev"
            },
            "tags_all": {
              "Name": "bjgomes-privatesubnet",
              "env": "Dev"
            },
            "vpc_id": "vpc-0c0bd5f58b5fc22a2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785169158894:subnet/subnet-0acb14902ff4c5ff6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0acb14902ff4c5ff6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "785169158894",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bjgomes-privatesubnet",
              "env": "Dev"
            },
            "tags_all": {
              "Name": "bjgomes-privatesubnet",
              "env": "Dev"
            },
            "vpc_id": "vpc-0c0bd5f58b5fc22a2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785169158894:subnet/subnet-0884b9f1bc5290310",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0884b9f1bc5290310",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "785169158894",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bjgomes-publicsubnet",
              "env": "Dev"
            },
            "tags_all": {
              "Name": "bjgomes-publicsubnet",
              "env": "Dev"
            },
            "vpc_id": "vpc-0c0bd5f58b5fc22a2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785169158894:subnet/subnet-0644a22ad3d566a87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0644a22ad3d566a87",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "785169158894",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bjgomes-publicsubnet",
              "env": "Dev"
            },
            "tags_all": {
              "Name": "bjgomes-publicsubnet",
              "env": "Dev"
            },
            "vpc_id": "vpc-0c0bd5f58b5fc22a2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785169158894:vpc/vpc-0c0bd5f58b5fc22a2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09f99a3d23d04316e",
            "default_route_table_id": "rtb-070ea3526fffd36af",
            "default_security_group_id": "sg-09f6cd18a16ae430f",
            "dhcp_options_id": "dopt-0c0c93d52d87e640e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c0bd5f58b5fc22a2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-070ea3526fffd36af",
            "owner_id": "785169158894",
            "tags": {
              "Name": "bjgomes-vpc",
              "env": "Dev"
            },
            "tags_all": {
              "Name": "bjgomes-vpc",
              "env": "Dev"
            }
          }
        }
      ]
    }
  ]
}